[css-align] Don't resolve 'auto' values for computed style.

The CSS Box Alignment specification has been changed recently so that
now all the propeties have the specificed value as computed value. The
rationale of this change are at the associated W3C github issue [1].

This change implies that we don't need to execute the StyleAdjuter
logic we implemented specifically for supporting 'auto' values
resolution for computed style. We can live now with resolution at
layout time only.

[1] https://github.com/w3c/csswg-drafts/issues/440

BUG=725489

Review-Url: https://codereview.chromium.org/2455093002
Cr-Commit-Position: refs/heads/master@{#475400}

Former-commit-id: 5389373c6dec30d783eb46b4c8190720f411a8a7